# Algorithms

./: .gitignore  .portpal.toml  CLAUDE.md  GOALS.md  README.md  pytest.ini  requirements.txt
.claude/agents/: algorithms-reviewer.md  devops-github-manager.md  unit-test-runner.md
.github/workflows/: cpp-tests.yml  lean4-tests.yml  python-tests.yml  rust-tests.yml
Challenge_and_Problems/Programming_Assignment_1_course_II/: Assignment_1.py  DoubleLinkedList.py  Graph.py  problem8.10test3.txt
DataStructures/: DoubleLinkedList.py  Graph.py  LinkedList.py  Node.py  Queue.py  Readme.md  Stack.py  bfs.py  dfs.py  dfs_copy.py  graph  sandbox.py
DataStructures/cpp/: CMakeLists.txt  Graph.cpp  Graph.hpp  Symbol.hpp  graph_test_program.cpp
DataStructures/data/: tinyG.dot
DataStructures/python/: Graph.py  Node.py  dfs_copy.py  sandbox.py
LeetCode/0.Common/: timing.cpp  timing.hpp
LeetCode/1.TwoSum/: CMakeLists.txt
LinearAlgebra/: MatMul.py
LinearAlgebra/Python/: ModfiedGramShmidt.py
MinimumCut/: MinimumCut.py  input_random_11_25.txt  input_random_12_25.txt  input_random_13_50.txt  input_random_15_50.txt  input_random_17_75.txt  input_random_20_75.txt  input_random_21_100.txt  input_random_23_100.txt  input_random_24_100.txt  input_random_2_6.txt  input_random_33_175.txt  input_random_38_200.txt  input_random_40_200.txt  input_random_9_25.txt  llmminimumcut.py
MinimumCut/cpp/: CMakeLists.txt  MinimumCut.cpp
MinimumCut/data/: input_random_14_50.txt  input_random_16_50.txt  input_random_26_125.txt  input_random_28_125.txt  input_random_29_150.txt  input_random_30_150.txt  input_random_31_150.txt  input_random_32_150.txt  input_random_35_175.txt  input_random_39_200.txt  input_random_5_10.txt
Misc/: CountInversions.py  RecursiveIntegerMultiplication.py
RecursiveIntegerMultiplication/: Recursive_IntegerMultiplication.py
Search/: Search.py
Select/Python/: DSelect.py  RSelect.py
Sort/: MergeSort.py  Sort.py
Udacity/Lab_Path_Planning/: CMakeLists.txt  software-design.md
Udacity/Lab_Path_Planning/prototype/: foward_difference.py
Udacity/Lab_Path_Planning/src/: BFS.h  CMakeLists.txt  Model.h  Plan.h  main.cpp  main.h
Uncategorized/: RandomDataGenerator.py
cpp/: CMakeLists.txt
cpp/data_structures/: CMakeLists.txt
cpp/data_structures/include/: bfs.hpp  dfs.hpp  double_linked_list.hpp  graph.hpp  linked_list.hpp  queue.hpp  stack.hpp
cpp/data_structures/src/: bfs.cpp  dfs.cpp  double_linked_list.cpp  graph.cpp  linked_list.cpp  queue.cpp  stack.cpp
cpp/data_structures/tests/: data_structures_test.cpp
cpp/integer_multiplication/: CMakeLists.txt
cpp/integer_multiplication/include/: karatsuba.hpp  standard_multiplication.hpp
cpp/integer_multiplication/src/: karatsuba.cpp  standard_multiplication.cpp
cpp/integer_multiplication/tests/: integer_multiplication_test.cpp
cpp/linear_algebra/: CMakeLists.txt
cpp/linear_algebra/include/: linear_algebra.hpp
cpp/linear_algebra/src/: linear_algebra.cpp
cpp/linear_algebra/tests/: linear_algebra_test.cpp
cpp/minimum_cut/: CMakeLists.txt
cpp/minimum_cut/include/: kargers_algorithm.hpp
cpp/minimum_cut/src/: kargers_algorithm.cpp
cpp/minimum_cut/tests/: minimum_cut_test.cpp
cpp/misc/: CMakeLists.txt
cpp/misc/include/: count_inversions.hpp
cpp/misc/src/: count_inversions.cpp
cpp/misc/tests/: misc_test.cpp
cpp/parity/: CMakeLists.txt  parity_runner.cpp  parity_runner.hpp  registry.cpp
cpp/search/: CMakeLists.txt
cpp/search/include/: binary_search.hpp  closest_pair.hpp  second_largest.hpp  three_sum.hpp
cpp/search/src/: binary_search.cpp  closest_pair.cpp  second_largest.cpp  three_sum.cpp
cpp/search/tests/: search_test.cpp
cpp/select/: CMakeLists.txt
cpp/select/include/: select.hpp
cpp/select/src/: select.cpp
cpp/select/tests/: select_test.cpp
cpp/sort/: CMakeLists.txt
cpp/sort/include/: bubble_sort.hpp  insertion_sort.hpp  merge_sort.hpp  quick_sort.hpp
cpp/sort/src/: bubble_sort.cpp  insertion_sort.cpp  merge_sort.cpp  quick_sort.cpp
cpp/sort/tests/: sort_test.cpp
docs/: lean4-catchable-bugs.md  porting-notes.md  python-cpp-type-mapping.md  python-rust-type-mapping.md  rust-lean4-conversion.md
lean4/: Algorithms.lean  Main.lean  ParityRunner.lean  lakefile.lean  lean-toolchain
parity/: python_adapter.py
parity/fixtures/: integer_multiplication.karatsuba_multiply.json  integer_multiplication.standard_multiply.json  linear_algebra.mat_mul.json  linear_algebra.modified_gram_schmidt.json  linear_algebra.rec_mat_mul.json  linear_algebra.strassen.json  linear_algebra.vec_dot.json  misc.count_inversions.json  search.binary_search.json  search.second_largest.json  select.d_select.json  select.r_select.json  sort.bubble_sort.json  sort.insertion_sort.json  sort.merge_sort.json  sort.quick_sort.json
plans/: alright-review-this-library-clever-lagoon.md  take-a-look-at-lively-hinton.md
python/data_structures/: Readme.md  bfs.py  dfs.py  double_linked_list.py  (+4 more)
rust/: Cargo.toml
rust/algorithms-data-structures/: Cargo.toml
rust/algorithms-data-structures/src/: lib.rs
rust/algorithms-graph/: Cargo.toml
rust/algorithms-graph/src/: lib.rs
rust/algorithms-integer-mult/: Cargo.toml
rust/algorithms-integer-mult/src/: lib.rs
rust/algorithms-linear-algebra/: Cargo.toml
rust/algorithms-linear-algebra/src/: lib.rs
rust/algorithms-minimum-cut/: Cargo.toml
rust/algorithms-minimum-cut/src/: lib.rs
rust/algorithms-misc/: Cargo.toml
rust/algorithms-misc/src/: lib.rs
rust/algorithms-search/: Cargo.toml
rust/algorithms-search/src/: lib.rs
rust/algorithms-select/: Cargo.toml
rust/algorithms-select/src/: lib.rs
rust/algorithms-sort/: Cargo.toml
rust/algorithms-sort/src/: lib.rs
rust/parity-runner/: Cargo.toml
rust/parity-runner/src/: main.rs
tests/: TEST_COVERAGE_REPORT.md  conftest.py  run_all_tests.sh  test_count_inversions.py  test_datastructures.py  test_gram_schmidt.py  test_graph.py  test_import_side_effects.py  test_matmul.py  test_mergesort.py  test_minimum_cut.py  test_multiplication.py  test_search.py  test_select.py  test_sort.py
(+63 files in other folders)
